Use prefer light in light mode

Changing org.gnome.desktop.interface.color-scheme leads to xdg-desktop-portal-gtk issuing SettingChanged for org.freedesktop.appearance.colo-scheme, which in turn gets forwarded by xdg-desktop-portal and applications use no preference mode instead of the prefer light mode suggested by xdg-desktop-portal-kde.

Doing the same as xdg-desktop-portal-kde avoids the issue.

BUG: 511081